syntax = "proto2";

package apollo.planning;

import "modules/planning/proto/st_boundary_config.proto";

message QpSplineConfig {                                                 // 做spline平滑时的一些参数设置
  optional uint32 number_of_discrete_graph_t = 1;                        // 离散时间点的个数为4
  optional uint32 spline_order = 2;                                      // 做spline平滑的次数为5
  optional double speed_kernel_weight = 3;                               // 速度kernel的权值为0.0
  optional double accel_kernel_weight = 4;                               // 加速度kernel的权值为1000.0
  optional double jerk_kernel_weight = 5;                                // 滚动kernel的权值为1000.0
  optional double follow_weight = 6;                                     // 跟车的权重为5.0
  optional double stop_weight = 7;                                       // 停车的权重为0.2
  optional double cruise_weight = 8;                                     // 巡航的权重为0.3
  optional double regularization_weight = 9 [ default = 0.1 ];           // 正则化的权重为0.1
  optional double follow_drag_distance = 10;                             // 跟随拖动距离为17米
  optional double dp_st_reference_weight = 11;                           // dp动态规划得到的参考线权重为0.0
  optional double init_jerk_kernel_weight = 12;                          // 初始化抖动kernel的权重为5x10的四次方
  optional double yield_weight = 13;                                     // 让行的权重为100
  optional double yield_drag_distance = 14;                              // 让行的拖动距离为20米
}

message QpPiecewiseConfig {                                              // 二次规划(QP)分段的配置
  optional uint32 number_of_evaluated_graph_t = 1;                       // t评估图的数量为40
  optional double accel_kernel_weight = 2;                               // 加速度的权重为1000.0
  optional double jerk_kernel_weight = 3;                                // 抖动的权重为100.0
  optional double follow_weight = 4;                                     // 跟车的权重为5.0
  optional double stop_weight = 5;                                       // 停车的权重为0.2
  optional double cruise_weight = 6;                                     // 巡航的权重为0.5
  optional double regularization_weight = 7 [ default = 0.1 ];           // 正则化的权重为0.1
  optional double follow_drag_distance = 8;                              // 跟车的距离为17.0米
}

// next ID: 11
message QpStSpeedConfig {                                                  // st坐标下的QP配置项
  optional double total_path_length = 1 [ default = 200.0 ];               // 总长度为250米
  optional double total_time = 2 [ default = 6.0 ];                        // 总时间为7s
  optional double preferred_max_acceleration = 4 [ default = 1.2 ];        // 首选最大的加速度为2.5
  optional double preferred_min_deceleration = 5 [ default = -1.8 ];       // 首选最小的减速度为3.3
  optional double max_acceleration = 6 [ default = 2.0 ];                  // 最大的加速度为3.0
  optional double min_deceleration = 7 [ default = -4.5 ];                 // 最小的减速度为4.0

  optional QpSplineConfig qp_spline_config = 8;                            // 二次规划的spline配置
  optional QpPiecewiseConfig qp_piecewise_config = 9;                      // 二次规划的分段配置
  optional apollo.planning.StBoundaryConfig st_boundary_config = 10;       // st坐标系中进行边框配置
}
